added models repos and services

--- a/johannsark/src/main/resources/application.properties
+++ b/johannsark/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=${PORT:2019}
  server.servlet.context-path=/api
 
 # Which db to run
-#local.run.db=H2
- local.run.db=POSTGRESQL
+local.run.db=H2
+# local.run.db=POSTGRESQL
 
 # Environment Variables Needed for PostgreSQL database
 # MYDBHOST
@@ -21,9 +21,9 @@ server.port=${PORT:2019}
 # posgress://username      :password                                                        @url                                      :5432/dbname
 
 # Begin h2 configuration
-#spring.h2.console.enabled=true
-#spring.h2.console.path=/h2-console
-#spring.h2.console.settings.web-allow-others=true
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+spring.h2.console.settings.web-allow-others=true
 # End h2 configuration
 
 # What do with the schema
